rust/tests/trybuild_soe_max.fail
use swag::soe::*;
use swag::ops::*;

/// Should not compile since Max is not invertible
fn main() {
    SoE::<i32, Max>::new();
}
